--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -88,8 +88,9 @@
 						</div>
 						<div class="row-col-md-4 text-center">
 							<field name="employee_signature" widget="signature"/>
-							<span><br/><b><field name="timesheets_employee_name"/></b><br/></span>
-							<field name="timesheets_employee_function"/>
+							<field name="client_signature" widget="signature"/>
+							<span><br/><b><field name="timesheets_employee_name"/>            <field name="parent_res_contact"/></b><br/></span>
+							<span><field name="timesheets_employee_function"/>                <field name="parent_contact_function"/><br/></span>
 						</div>
 						
 					</page>
