--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -86,11 +86,11 @@
 							<span><br/><b><u>5. CONCLUSIONES Y RECOMENDACIONES</u></b><br/></span>
 							<field name="description_conclusion"/>
 						</div>
-						<div class="row-col-md-4 text-center">
+						<div class="row-col-md-8 text-center">
 							<field name="employee_signature" widget="signature"/>
 							<field name="client_signature" widget="signature"/>
-							<span><br/><b><field name="timesheets_employee_name"/>            <field name="parent_res_contact"/></b><br/></span>
-							<span><field name="timesheets_employee_function"/>                <field name="parent_contact_function"/><br/></span>
+							<span><br/><b><field name="timesheets_employee_name" style="margin-right:10px;" /><field name="parent_res_contact"/></b><br/></span>
+							<span><field name="timesheets_employee_function" style="margin-right:10px;" /><field name="parent_contact_function"/><br/></span>
 						</div>
 						
 					</page>
