--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -19,7 +19,7 @@
 						<!--<field name="move_interno2"/>-->
 						<field name="sale_line_product"/>
 						<field name="sale_line_product2"/>
-						<field name="sale_line_product3"/>
+						<!--<field name="sale_line_product3"/> ERROR DEL SINGLETON-->
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
