--- a/mstech/views/report_jasatec_contract.xml
+++ b/mstech/views/report_jasatec_contract.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
         <record id="jasatec_contract" model="ir.actions.report">
-            <field name="name">Contrato / Plan</field>
+            <field name="name">Contrato</field>
             <field name="model">sale.order</field>
             <field name="report_type">qweb-pdf</field>
             <field name="report_name">mstech.report_sale_contract</field>
