--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -20,6 +20,7 @@
 						<field name="sale_line_product"/>
 						<field name="sale_line_product2"/>
 						<!--<field name="sale_line_product3"/> ERROR DEL SINGLETON-->
+						<field name="sale_line_product4"/>
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
