--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -21,6 +21,7 @@
 						<field name="sale_line_product2"/>
 						<!--<field name="sale_line_product3"/> ERROR DEL SINGLETON-->
 						<field name="sale_line_product4"/>
+						<field name="sale_line_product5"/>
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
