--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -15,11 +15,11 @@
 				</xpath>
 				<xpath expr="//notebook" position="inside">
 					<page name="herramientas_transfe" string="Herramientas">
-						<field name="move_interno"/>
-						<!--<field name="move_interno2"/>-->
+						<!--<field name="move_interno"/>
+						<field name="move_interno2"/>-->
 						<field name="sale_line_product"/>
-						<field name="sale_line_product2"/>
-						<!--<field name="sale_line_product3"/> ERROR DEL SINGLETON-->
+						<!--<field name="sale_line_product2"/>
+						<field name="sale_line_product3"/> ERROR DEL SINGLETON-->
 						<field name="sale_line_product4"/>
 						<field name="sale_line_product5"/>
 					</page>
