--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -34,13 +34,13 @@
 								se le remitió la Cotización N° <field name="sale_line_id" readonly="1"/>, de fecha <field name="sale_order_date" readonly="1"/> respecto al 
 								<field name="nombre_titulo"/> ubicados en la ciudad de <field name="partner_city" readonly="1"/>.<br/>Luego, nos indican que aceptan nuestra cotización y que se realizará el servicio en el 
 								mes de __. De inmediato nuestra empresa realizó las coordinaciones con <field name="parent_res_contact"/>, <field name="parent_contact_function"/> de <field name="partner_id" readonly="1"/> 
-								y se programó el servicio técnico para el día <field name="planned_date_begin" readonly="1"/>.
+								y se programó el servicio técnico para el día <field name="fecha_inicio" readonly="1"/>.
 							</span>
 						</div>
 						<div class="row col">
 							<span><br/><b><u>2. DATOS DEL SERVICIO</u><br/>2.1. Fecha y Lugar:</b><br/></span>
 							<div class="especial-indent">
-								<span>El servicio de mantenimiento preventivo de <field name="nombre_titulo" readonly="1"/> se realizó los días <field name="planned_date_begin" readonly="1"/> al <field name="planned_date_end" readonly="1"/>
+								<span>El servicio de mantenimiento preventivo de <field name="nombre_titulo" readonly="1"/> se realizó los días <field name="fecha_inicio" readonly="1"/> al <field name="fecha_fin" readonly="1"/>
 									,en las instalaciones de <field name="partner_id" readonly="1"/>, ubicada en <field name="partner_street" readonly="1"/> en la ciudad de <field name="partner_city" readonly="1"/>,
 									provincia de __, departamento de <field name="partner_province"/>.
 								</span>
