--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -16,7 +16,6 @@
 				<xpath expr="//notebook" position="inside">
 					<page name="herramientas_transfe" string="Herramientas">
 						<field name="sale_line_product4"/>
-						<field name="sale_line_product5"/>
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
@@ -52,7 +51,8 @@
 						</div>
 						<div class="row col">
 							<span><br/><b>2.3. Equipamiento:</b><br/>Los equipos a los que se realizó el servicio de mantenimiento preventivo son los que se indican a continuación:<br/></span>
-							<table class="table table-sm o_main_table">
+							<field name="sale_line_product"/>
+							<!--<table class="table table-sm o_main_table">
 								<thead>
 									<tr>
 										<th name="th_number_eq" class="text-center">N°</th>
@@ -67,9 +67,7 @@
 									<td name="td_serial_eq" class="text-center">__</td>
 									<td name="td_features_eq" class="text-center"><field name="order_line_product_desc"/></td>
 								</tbody>
-							</table>
-							<!--<field name="order_line_m2m"/>-->
-							
+							</table>-->
 						</div>
 						<div class="col row">
 							<span><br/><b><u>3. DESARROLLO DEL SERVICIO</u></b><br/>Se realizaron las siguientes actividades:<br/></span>
