--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -29,7 +29,7 @@
 						</div>
 						<div class="row col">
 							<span><br/><b><u>1. ANTECEDENTES</u></b><br/></span>
-							<span> Por requerimiento de la empresa <field name="cliente_task" readonly="1"/> con <field name="partner_type_vat" readonly="1"/> - <field name="partner_number_vat" readonly="1"/> 
+							<span> Por requerimiento de la empresa <field name="cliente_task"/> con <field name="partner_type_vat" readonly="1"/> - <field name="partner_number_vat" readonly="1"/> 
 								se le remitió la Cotización N° <field name="sale_line_id" readonly="1"/>, de fecha <field name="sale_order_date" readonly="1"/> respecto al 
 								<field name="nombre_titulo"/> ubicados en la ciudad de <field name="cliente_task" readonly="1"/>.<br/>Luego, nos indican que aceptan nuestra cotización y que se realizará el servicio en el 
 								mes de __. De inmediato nuestra empresa realizó las coordinaciones con <field name="parent_res_contact"/>, <field name="parent_contact_function"/> de <field name="cliente_task" readonly="1"/> 
