--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -16,7 +16,12 @@
 				<xpath expr="//notebook" position="inside">
 					<page name="herramientas_transfe" string="Herramientas">
 						<field name="mov_herramienta"/>
-						<!--<field name="sale_line_product4"/>-->
+						<tree string="lista para herramientas" multi_edit="1" sample="1">
+							<field name="priority" optional="show" widget="priority" nolabel="1"/>
+							<field name="name" decoration-bf="1"/>
+							<field name="location_id" options="{'no_create': True}" string="From" groups="stock.group_stock_multi_locations" optional="show"/>
+							<field name="location_dest_id" options="{'no_create': True}" string="To" groups="stock.group_stock_multi_locations" optional="show"/>
+						</tree>
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
