--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -15,13 +15,14 @@
 				</xpath>
 				<xpath expr="//notebook" position="inside">
 					<page name="herramientas_transfe" string="Herramientas">
-						<field name="mov_herramienta"/>
-						<tree string="lista para herramientas" multi_edit="1" sample="1">
-							<field name="priority" optional="show" widget="priority" nolabel="1"/>
-							<field name="name" decoration-bf="1"/>
-							<field name="location_id" options="{'no_create': True}" string="From" groups="stock.group_stock_multi_locations" optional="show"/>
-							<field name="location_dest_id" options="{'no_create': True}" string="To" groups="stock.group_stock_multi_locations" optional="show"/>
-						</tree>
+						<field name="mov_herramienta">
+							<tree string="lista para herramientas" multi_edit="1" sample="1">
+								<field name="priority" optional="show" widget="priority" nolabel="1"/>
+								<field name="name" decoration-bf="1"/>
+								<field name="location_id" options="{'no_create': True}" string="From" groups="stock.group_stock_multi_locations" optional="show"/>
+								<field name="location_dest_id" options="{'no_create': True}" string="To" groups="stock.group_stock_multi_locations" optional="show"/>
+							</tree>
+						</field>
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
