--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -110,17 +110,13 @@
 		<field name="priority" eval="100"/>
 		<field name="arch" type="xml">
 			<tree editable="bottom">
-				<field name="consumption" invisible="1"/>
-				<field name="company_id" invisible="1"/>
-				<field name="is_produced" invisible="1"/>
-				<field name="is_user_working" invisible="1"/>
-				<field name="name" invisible="1"/>
-				<field name="product_uom_id" invisible="1" readonly="0"/>
-				<field name="production_state" invisible="1"/>
-				<field name="production_bom_id" invisible="1"/>
-				<field name="qty_producing" invisible="1"/>
-				<field name="time_ids" invisible="1"/>
-				<field name="working_state" invisible="1"/>
+				<field name="name" decoration-bf="1"/>
+				<field name="picking_type_id" optional="show"/>
+				<field name="user_id" optional="hide" widget="many2one_avatar_user"/>
+				<field name="partner_id" optional="show"/>
+				<field name="company_id" groups="base.group_multi_company" optional="hide"/>
+				<field name="location_id" options="{'no_create': True}" string="From" groups="stock.group_stock_multi_locations" optional="show"/>
+				<field name="location_dest_id" options="{'no_create': True}" string="To" groups="stock.group_stock_multi_locations" optional="show"/>
 				<!--<button name="do_unreserve" type="object" string="Unreserve"/>-->
 			</tree>
 		</field>
