--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -117,7 +117,7 @@
 				<field name="company_id" groups="base.group_multi_company" optional="hide"/>
 				<field name="location_id" options="{'no_create': True}" string="From" groups="stock.group_stock_multi_locations" optional="show"/>
 				<field name="location_dest_id" options="{'no_create': True}" string="To" groups="stock.group_stock_multi_locations" optional="show"/>
-				<!--<button name="do_unreserve" type="object" string="Unreserve"/>-->
+				<button name="do_unreserve" type="object" string="Unreserve"/>
 			</tree>
 		</field>
 	</record>
